# https://packaging.python.org/tutorials/packaging-projects/

[metadata]
name = santacruz_watersmart
version = 0.1.1
author = Emmanuel Leroy
author_email = eleroy@msn.com
description = Client to access the Santa Cruz Municipal Utilities water data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/streamnsight/santacruz-watersmart
project_urls =
    Bug Tracker = https://github.com/streamnsight/santacruz-watersmart/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    santacruz_watersmart = santacruz_watersmart
packages = find:
python_requires = >=3.9
install_requires =
   httpx>=0.24.1, <1
   
