# https://packaging.python.org/tutorials/packaging-projects/

[metadata]
name = vertexone_watersmart
version = 0.1.4
author = Emmanuel Leroy
author_email = eleroy@msn.com
description = Client to access the VertexOne WaterSmart water data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/streamnsight/vertexone-watersmart
project_urls =
    Bug Tracker = https://github.com/streamnsight/vertexone-watersmart/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    vertexone_watersmart = vertexone_watersmart
packages = find:
python_requires = >=3.9
install_requires =
   httpx>=0.24.1, <1
   
